# agricore-ros2-workspace

./: .gitignore
backup/agricore_telemetry/: package.xml
backup/agricore_vehicle_gateway/agricore_vehicle_gateway/: node.py
backup/agricore_watchdog/: setup.cfg
backup/agricore_watchdog/agricore_watchdog/: node.py
launch/: agricore.launch.bak.py
src/agricore_mission_manager/: package.xml  setup.cfg  setup.py
src/agricore_mission_manager/agricore_mission_manager/: mav_heartbeat_test.py  mission_manager_node.py  system_health_check.py
src/agricore_mission_manager/launch/: agricore.launch.py  agricore.launch_BAK.py
src/agricore_telemetry/: setup.cfg  setup.py
src/agricore_telemetry/agricore_telemetry/: node.py
src/agricore_vehicle_gateway/: package.xml  setup.cfg  setup.py
src/agricore_watchdog/: package.xml  setup.py
