<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agricore_mission_manager</name>
  <version>0.0.0</version>
  <description>Mission manager for Agricore autonomous mower system</description>
  <maintainer email="your.email@example.com">Bruce</maintainer>
  <license>Apache-2.0</license>  <!-- or BSD, MIT, etc. -->

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
